# research-dctapseq

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
dctap/libs/: pandas.py
dctap/qpcr/analysis/: .ipynb  JR92-250106-analysis.ipynb  JR95-250129-analysis.html  JR95-250129-analysis.ipynb  JR98-250306-analysis-extras.ipynb  JR98-250306-analysis.ipynb
dctap/qpcr/constants/: plates.py
dctap/qpcr/utils/: __init__.py  core.py
dctap/sceptre/250412-sceptre-initial-guide_target-datacleaning-standalone/: readme.md
dctap/sceptre/250412-sceptre-initial-guide_target-datacleaning-standalone/resources/240905_HPC_guide_design/guide_targets/: .Rhistory  simple_data_cleaning_script.R
dctap/sceptre/250412-sceptre-initial-guide_target-datacleaning-standalone/resources/240905_HPC_guide_design/guide_targets/pipeline_inputs/: data_cleaning_methodology.md
dctap/sceptre/250412-sceptre-initial-guide_target-datacleaning-standalone/resources/240905_HPC_guide_design/guide_targets/tmp/: UntitledR.R  gRNA_groups_table.rds  gene_gRNA_group_pairs.rds  grna_target_pairs.tsv  grna_target_pairs.xlsx  grna_target_pairs_no_nopostctrl.tsv
dctap/sceptre/sceptre-formattertools-cli/: pyproject.toml
dctap/sceptre/sceptre-formattertools-cli/sceptretoolscli/core/: cli.py
dctap/sceptre/sceptre-formattertools-cli/sceptretoolscli/core/formatters/: __init__.py  format_inputs.py
dctaptoolkit/: README.md
dctaptoolkit/qpcr/qpcr-analysis-tool-v001/: README.md  pyproject.toml
dctaptoolkit/qpcr/qpcr-analysis-tool-v001/src/dctap/qpcr/constants/: __init__.py  core.py  plates.py
dctaptoolkit/qpcr/qpcr-analysis-tool-v001/src/dctap/qpcr/libs/: __init__.py  incrementor.py  pandas.py
dctaptoolkit/qpcr/qpcr-analysis-tool-v001/src/dctap/qpcr/utils/: core.py
dctaptoolkit/sceptre/sceptre-formattertools-cli/examples/: example_unorganized_gene_target_file.csv  example_unorganized_with_ESGN_gene_target_file.csv
dctaptoolkit/sceptre/sceptre-formattertools-cli/sceptretoolscli/: __init__.py
dctaptoolkit/sceptre/sceptre-formattertools-cli/sceptretoolscli/core/: api.py  cli.py
dctaptoolkit/sceptre/sceptre-formattertools-cli/sceptretoolscli/core/formatters/: format_inputs.py
dctaptoolkit/sceptre/sceptre-input-datacleaning-oneoff/: readme.md
dctaptoolkit/sceptre/sceptre-input-datacleaning-oneoff/analyses/2024-09-05/: simple_data_cleaning_script.R
dctaptoolkit/sceptre/sceptre-input-datacleaning-oneoff/analyses/2024-09-05/metadata/data_cleaning_inputs/: 240905_hpc_screen_alt_guide_coordinates_hg19.tsv  240905_hpc_screen_guide_annotations_hg19.tsv
dctaptoolkit/sceptre/sceptre-input-datacleaning-oneoff/analyses/2024-09-05/metadata/data_cleaning_outputs/: guide_targets.tsv
dctaptoolkit/sceptre/sceptre-input-datacleaning-oneoff/analyses/2024-09-05/resources/: ChosenGenes.AllRegions.bed  d0_d2_guide_annotations_hg19.csv
docs/typst/: dctap.typ
docs/typst/src/: ch0-preface.typ  qpcr.typ
(+1 files in other folders)
